@@ -49,6 +49,7 @@ from Products.ATContentTypes.content.schemata import ATContentTypeSchema
 from Products.ATContentTypes.content.schemata import relatedItemsField
 from Products.ATContentTypes.lib.historyaware import HistoryAwareMixin
 from Products.ATContentTypes.interfaces import IATDocument
+from Products.ATContentTypes.utils import moveFieldInSchema
 
 ATDocumentSchema = ATContentTypeSchema.copy() + Schema((
     TextField('text',
@@ -72,6 +73,9 @@ ATDocumentSchema = ATContentTypeSchema.copy() + Schema((
     ), marshall=RFC822Marshaller()
     )
 ATDocumentSchema.addField(relatedItemsField)
+
+# Move allowDiscussion from metadata schemata to last field of default
+moveFieldInSchema(ATDocumentSchema, 'allowDiscussion', -1, 'default')
 
 class ATDocument(ATCTContent, HistoryAwareMixin):
     """A page in the portal, which can contain rich text."""
