@@ -57,6 +57,7 @@ from Products.ATContentTypes.lib.calendarsupport import CalendarSupportMixin
 from Products.ATContentTypes.lib.historyaware import HistoryAwareMixin
 from Products.ATContentTypes.permission import ChangeEvents
 from Products.ATContentTypes.utils import DT2dt
+from Products.ATContentTypes.utils import moveFieldInSchema
 
 ATEventSchema = ATContentTypeSchema.copy() + Schema((
     DateTimeField('startDate',
@@ -197,6 +198,8 @@ ATEventSchema = ATContentTypeSchema.copy() + Schema((
     )
 ATEventSchema.addField(relatedItemsField)
 
+# Move allowDiscussion from metadata schemata to last field of default
+moveFieldInSchema(ATEventSchema, 'allowDiscussion', -1, 'default')
 
 class ATEvent(ATCTContent, CalendarSupportMixin, HistoryAwareMixin):
     """Information about an upcoming event, which can be displayed in the calendar."""
