@@ -49,6 +49,7 @@ from Products.ATContentTypes.interfaces import IATFile
 from Products.ATContentTypes.content.schemata import ATContentTypeSchema
 from Products.ATContentTypes.content.schemata import relatedItemsField
 from Products.ATContentTypes.content.schemata import urlUploadField
+from Products.ATContentTypes.utils import moveFieldInSchema
 from Products.validation.validators.SupplValidators import MaxSizeValidator
 
 from Products.validation.config import validation
@@ -78,6 +79,8 @@ ATFileSchema = ATContentTypeSchema.copy() + Schema((
 ATFileSchema.addField(urlUploadField)
 ATFileSchema.addField(relatedItemsField)
 
+# Move allowDiscussion from metadata schemata to last field of default
+moveFieldInSchema(ATFileSchema, 'allowDiscussion', -1, 'default')
 
 class ATFile(ATCTFileContent):
     """An external file uploaded to the portal."""
