@@ -42,6 +42,7 @@ from Products.ATContentTypes.content.base import ATCTContent
 from Products.ATContentTypes.interfaces import IATLink
 from Products.ATContentTypes.content.schemata import ATContentTypeSchema
 from Products.ATContentTypes.content.schemata import relatedItemsField
+from Products.ATContentTypes.utils import moveFieldInSchema
 
 ATLinkSchema = ATContentTypeSchema.copy() + Schema((
     StringField('remoteUrl',
@@ -59,6 +60,9 @@ ATLinkSchema = ATContentTypeSchema.copy() + Schema((
             i18n_domain = "plone")),
     ))
 ATLinkSchema.addField(relatedItemsField)
+
+# Move allowDiscussion from metadata schemata to last field of default
+moveFieldInSchema(ATLinkSchema, 'allowDiscussion', -1, 'default')
 
 class ATLink(ATCTContent):
     """A link to an external resource."""
