@@ -48,6 +48,7 @@ from Products.ATContentTypes.content.image import ATCTImageTransform
 from Products.ATContentTypes.interfaces import IATNewsItem
 from Products.ATContentTypes.content.schemata import ATContentTypeSchema
 from Products.ATContentTypes.content.schemata import relatedItemsField
+from Products.ATContentTypes.utils import moveFieldInSchema
 
 from Products.validation.config import validation
 from Products.validation.validators.SupplValidators import MaxSizeValidator
@@ -114,6 +115,9 @@ ATNewsItemSchema = ATContentTypeSchema.copy() + Schema((
     ), marshall=RFC822Marshaller()
     )
 ATNewsItemSchema.addField(relatedItemsField)
+
+# Move allowDiscussion from metadata schemata to last field of default
+moveFieldInSchema(ATNewsItemSchema, 'allowDiscussion', -1, 'default')
 
 class ATNewsItem(ATDocument, ATCTImageTransform):
     """An announcement that will show up on the news portlet and in the news listing."""
